<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_generator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generator"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/btn_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/btn_parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parameters"
        tools:ignore="ButtonStyle" />

</LinearLayout>