<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="18dp"
    tools:context=".GeneratorActivity">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/name_input"
        android:layout_marginEnd="12dp"
        android:labelFor="@+id/name_input"
        android:text="@string/maze_name"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/name_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="fill"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="21sp" />

    <RelativeLayout
        android:id="@+id/maze_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_below="@id/name_input"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <uksw.android.maze.view.MazeView
            android:id="@+id/maze_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_parameters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parameters" />

        <Button
            android:id="@+id/btn_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit" />
    </LinearLayout>

</RelativeLayout>